Update README.md and fix display issue on IE

--- a/UI/css/layout.css
+++ b/UI/css/layout.css
@@ -17,8 +17,15 @@ header.welcome {
 }
 
 .logo {
-    font-size: 60px;
+    font-size: 50px;
     font-family: 'Leckerli One', cursive;
+}
+
+@media only screen and (min-width: 768px) {
+    .logo {
+        font-size: 60px;
+        font-family: 'Leckerli One', cursive;
+    }
 }
 
 
