--- a/UI/css/responsive.css
+++ b/UI/css/responsive.css
@@ -125,11 +125,6 @@ html {
     margin: auto;
 }
 
-/* margin auto on mobile*/
-.m-auto-m {
-    display: block;
-    margin: auto;
-}
 
 /* margin-right */
 .mr-0 { margin-right: 0; }
@@ -180,8 +175,6 @@ html {
 .pr-4 { padding-right: 30px; }
 .pr-5 { padding-right: 45px; }
 
-/* hidden utilities */
-.hidden-m { display: none; }
 
 
 /* for tablet (allow the tablet to override that of mobile) */
@@ -216,21 +209,8 @@ html {
     .off-l-t-5 { margin-left: 41.66%; }
     .off-l-t-6 { margin-left: 50%; }
 
-    /* hidden utilities */
-    .hidden-m { display: initial; }
     .hidden-t { display: none; }
 
-    /* margin auto on mobile*/
-    .m-auto-m {
-        display: initial;
-        margin: initial;
-    }
-
-    /* margin auto on tablet */
-    .m-auto-t {
-        display: block;
-        margin: auto;
-    }
 }
 
 /* for desktop (allow desktop to override that of tablet)  */
@@ -267,21 +247,8 @@ html {
 
 
     /* hidden utilities */
-    .hidden-t { display: initial; }
-    .hidden-m { display: initial; }
     .hidden-d { display: none; }
 
-    /* margin auto on mobile*/
-    .m-auto-m {
-        display: initial;
-        margin: initial;
-    }
-
-    /* margin auto on tablet */
-    .m-auto-t {
-        display: initial;
-        margin: initial;
-    }
     /* margin auto on desktop */
     .m-auto-d {
         display: block;
@@ -301,3 +268,20 @@ table {
     margin: 0;
 }
 
+@media only screen and (max-width: 768px) {
+    /* margin auto on tablet */
+    .m-auto-t {
+        display: block;
+        margin: auto;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    /* margin auto on mobile */
+    .m-auto-m {
+        display: block;
+        margin: auto;
+    }
+    /* hidden utilities */
+    .hidden-m { display: none; }
+}
